gsap - fix spacing

--- a/src/public/less/pages/gsap.less
+++ b/src/public/less/pages/gsap.less
@@ -222,7 +222,7 @@
 					font-weight: 500;
 					font-size: 14px;
 					line-height: 24px;
-					letter-spacing: -.4px;
+					letter-spacing: -.3px;
 					color: #a6a6a6;
 					@media (min-width: @screen-sm-min) {
 						margin-right: 10%;
@@ -241,7 +241,7 @@
 					position: relative;
 					top: -190px;
 					margin-bottom: -198px;
-					margin-right: -16px;
+					margin-right: -23px;
 					@media (max-width: @screen-sm-min) {
 						display: none;
 					}
